--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
  
 html body{
 	margin:0px;
-	background:url(file:///Users/nayelibarraza/Desktop/portfolio-projects/206-file-structure-starter/img/symphony.png) repeat;
+	background:url(img/symphony.png) repeat;
 	/* Background image from http://subtlepatterns.com/ */
 	text-align:center;
 	font-family: 'Montserrat', sans-serif;
